# rust-secp256k1

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  README_PITCHFORK.md  Xargo.toml  appveyor.yml  build.rs  justfile  nightly-version  rustfmt.toml
.cargo/: config
.github/workflows/: README.md  cron-semi-weekly-update-nightly.yml  cross.yml  rust.yml  shellcheck.yml
api/: all-features.txt  alloc.txt  default-features.txt  global-context.txt  no-default-features.txt
common/: macros.rs
contrib/: _test.sh  check-for-api-changes.sh  crates.sh  extra_tests.sh  no-std.sh  sanitizer.sh  test.sh  test_vars.sh  tests.py  wasm.sh
depend/: check_uint128_t.c
depend/secp256k1/: .travis.yml  Makefile.am  configure.ac
depend/secp256k1/include/: ext.h
depend/secp256k1/src/: debug.h  ecmult_impl.h  ext.c  laxder_shim.c  ocalls.h  secp256k1.c  tests.c
depend/secp256k1/src/modules/schnorr/: main_impl.h
examples/: generate_keys.rs  log.rs  musig.rs  sign_verify.rs  sign_verify_recovery.rs  silentpayments.rs
githooks/: pre-commit
no_std_test/: Cargo.toml
no_std_test/src/: main.rs
secp256k1-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs  vendor-libsecp.sh
secp256k1-sys-abc/: Cargo.toml  build.rs  vendor-libsecp.sh
secp256k1-sys-abc/depend/: scratch_impl.h.patch  secp256k1.h.patch  util.h.patch
secp256k1-sys-abc/src/: lib.rs  recovery.rs
secp256k1-sys/depend/: check_gmp.c  ext.c  lax_der_parsing.c.patch  max_align.c  scratch.h.patch  scratch_impl.h.patch  secp256k1-HEAD-revision.txt  secp256k1.c.patch  secp256k1.h.patch  util.h.patch
secp256k1-sys/depend/config/: ecmult_static_context.h
secp256k1-sys/depend/secp256k1/: .cirrus.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile.am  TAGS  configure.ac  scr
secp256k1-sys/depend/secp256k1/.github/workflows/: ci.yml
secp256k1-sys/depend/secp256k1/ci/: ci.sh  linux-debian.Dockerfile
secp256k1-sys/depend/secp256k1/cmake/: TryAppendCFlags.cmake
secp256k1-sys/depend/secp256k1/contrib/: lax_der_parsing.c  lax_der_parsing.h  lax_der_privatekey_parsing.c  lax_der_privatekey_parsing.h
secp256k1-sys/depend/secp256k1/doc/: ellswift.md  musig.md
secp256k1-sys/depend/secp256k1/examples/: CMakeLists.txt  ecdh.c  ecdsa.c  ellswift.c  musig.c  schnorr.c  silentpayments.c
secp256k1-sys/depend/secp256k1/include/: secp256k1.h  secp256k1.h.orig  secp256k1_ecdh.h  secp256k1_ellswift.h  secp256k1_extrakeys.h  secp256k1_musig.h  secp256k1_preallocated.h  secp256k1_recovery.h  secp256k1_schnorrsig.h  secp256k1_silentpayments.h
secp256k1-sys/depend/secp256k1/sage/: gen_exhaustive_groups.sage  gen_split_lambda_constants.sage  prove_group_implementations.sage  secp256k1.sage
secp256k1-sys/depend/secp256k1/src/: CMakeLists.txt  assumptions.h  bench.c  bench_ecdh.c  bench_ecmult.c  bench_internal.c  bench_recover.c  bench_schnorrsig.c  bench_sign.c  bench_verify.c  ctime_tests.c  ecdsa.h  ecdsa_impl.h  eckey.h  eckey_impl.h  ecmult.h  ecmult_compute_table.h  ecmult_compute_table_impl.h  ecmult_const.h  ecmult_const_impl.h  ecmult_gen.h  ecmult_gen_compute_table.h  ecmult_gen_compute_table_impl.h  ecmult_gen_impl.h  ecmult_impl.h  field.h  field_10x26.h  field_10x26_impl.h  field_5x52.h  field_5x52_asm_impl.h  field_5x52_impl.h  field_5x52_int128_impl.h  field_impl.h  gen_context.c  group.h  group_impl.h  hash.h  hash_impl.h  hsort.h  hsort_impl.h  (+41 more)
secp256k1-sys/depend/secp256k1/src/asm/: field_10x26_arm.s
secp256k1-sys/depend/secp256k1/src/java/: org_bitcoin_NativeSecp256k1.c  org_bitcoin_NativeSecp256k1.h  org_bitcoin_Secp256k1Context.c  org_bitcoin_Secp256k1Context.h
secp256k1-sys/depend/secp256k1/src/java/org/bitcoin/: NativeSecp256k1.java  Secp256k1Context.java
secp256k1-sys/depend/secp256k1/src/modules/ecdh/: Makefile.am.include  bench_impl.h  main_impl.h  tests_impl.h
secp256k1-sys/depend/secp256k1/src/modules/ellswift/: Makefile.am.include  bench_impl.h  main_impl.h  tests_exhaustive_impl.h  tests_impl.h
secp256k1-sys/depend/secp256k1/src/modules/extrakeys/: Makefile.am.include  main_impl.h  tests_exhaustive_impl.h  tests_impl.h
secp256k1-sys/depend/secp256k1/src/modules/musig/: Makefile.am.include  keyagg.h  keyagg_impl.h  session.h  session_impl.h  tests_impl.h
secp256k1-sys/depend/secp256k1/src/modules/recovery/: Makefile.am.include  bench_impl.h  main_impl.h  tests_exhaustive_impl.h  tests_impl.h
secp256k1-sys/depend/secp256k1/src/modules/schnorrsig/: Makefile.am.include  bench_impl.h  main_impl.h  tests_exhaustive_impl.h  tests_impl.h
secp256k1-sys/depend/secp256k1/src/modules/silentpayments/: Makefile.am.include  bench_impl.h  main_impl.h  tests_impl.h
secp256k1-sys/depend/secp256k1/src/wycheproof/: WYCHEPROOF_COPYING
secp256k1-sys/depend/secp256k1/tools/: symbol-check.py
secp256k1-sys/src/: context.rs  ecdh.rs  extrakeys.rs  key.rs  lib.rs  macros.rs  recovery.rs  schnorr.rs  schnorrsig.rs  types.rs
secp256k1-sys/src/ecdsa/: mod.rs  recovery.rs
secp256k1-sys/wasm-sysroot/: stdio.h
secp256k1-sys/wasm/wasm-sysroot/: string.h
src/: constants.rs  context.rs  ecdh.rs  ecdsa.rs  ellswift.rs  error.rs  errors.rs  ffi.rs  hex.rs  key.rs  lib.rs  logging.rs  macros.rs  musig.rs  recovery.rs  scalar.rs  schnorr.rs  schnorrabc.rs  schnorrsig.rs  secp256k1.rs  secret.rs  serde_util.rs  silentpayments.rs  types.rs
src/context/: internal_nostd.rs  internal_std.rs  mod.rs  spinlock.rs
src/ecdsa/: global.rs  mod.rs  recovery.rs  serialized_signature.rs
src/key/: error.rs  mod.rs  secret.rs
src/key/non_c/: mod.rs  u256.rs  zp.rs
src/recovery/: ffi.rs  mod.rs
src/silentpayments/: mod.rs  recipient.rs  sender.rs
sys/: Cargo.toml
sys/depend/secp256k1/src/java/: org_bitcoin_NativeSecp256k1.c
sys/src/: lib.rs  macros.rs
tests/: api.rs  integration.rs  pitchfork.rs  serde.rs  serde_structure.rs
