[package]
name = "secp256k1-sys"
version = "0.1.0"
authors = [ "Dawid Ciężarkiewicz <dpc@ucore.info>",
            "Andrew Poelstra <apoelstra@wpsoftware.net>" ]
license = "CC0-1.0"
homepage = "https://github.com/apoelstra/rust-secp256k1/"
repository = "https://github.com/apoelstra/rust-secp256k1/"
documentation = "https://www.wpsoftware.net/rustdoc/secp256k1-sys/"
description = "Raw bindings for the `libsecp256k1` library."
keywords = [ "crypto", "ECDSA", "secp256k1", "libsecp256k1", "bitcoin" ]
readme = "README.md"
build = "build.rs"

[build-dependencies]
gcc = "0.3"

[lib]
name = "secp256k1_sys"
path = "src/lib.rs"

[features]
unstable = []
default = []
dev = ["clippy"]

[dependencies]
clippy = {version = "0.0", optional = true}
libc = "0.1"
rustc-serialize = "0.3"
serde = "0.6"
serde_json = "0.6"
